# platform-engineering-idp

./: README.md
.github/workflows/: backstage-ci.yml  backstage-deploy.yml  techdocs-build-check-demo.yml  techdocs-build-check.yml
backstage/: .env.example  .gitignore  app-config.local-container.yaml  app-config.production.yaml  app-config.yaml  catalog-info.yaml  cloudbuild.yaml  docker-compose.yaml  mkdocs.yml  package.json
backstage/catalog/apis/: cloudcart-backend-api.yaml
backstage/catalog/components/: cloudcart-backend.yaml  cloudcart-frontend.yaml
backstage/catalog/groups/: platform-team.yaml
backstage/catalog/resources/: postgres.yaml
backstage/catalog/systems/: cloudcart-platform.yaml
backstage/deploy/: argocd-application.yaml  deployment.yaml  kubernetes-plugin-rbac.yaml  poddisruptionbudget.yaml  service.yaml  serviceaccount.yaml
backstage/docs/: architecture.md  catalog.md  cicd.md  index.md  local-development.md  techdocs.md
backstage/scripts/: gen-local-tls.sh
backstage/techdocs/cloudcart-backend/: mkdocs.yml
backstage/techdocs/cloudcart-frontend/: mkdocs.yml
backstage/templates/cloudcart-fastapi/: template.yaml
backstage/templates/cloudcart-fastapi/skeleton/: .dockerignore  .gitignore  Dockerfile  README.md  catalog-info.yaml  mkdocs.yml  pyproject.toml
backstage/templates/cloudcart-fastapi/skeleton/app/: main.py
backstage/templates/cloudcart-fastapi/skeleton/docs/: index.md
backstage/templates/cloudcart-fastapi/skeleton/k8s/: deployment.yaml  service.yaml
backstage/templates/cloudcart-fastapi/skeleton/tests/: test_main.py
(+13 files in other folders)
